user registration and authrization complete

--- a/views/pug/index.pug
+++ b/views/pug/index.pug
@@ -7,9 +7,10 @@ html
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/public/style.css')
   body
+  h1.error#error #{errorMessage}
     h1.border.center FCC Advanced Node and Express
     h2.center#pug-success-message
-    | Looks like this page is being rendered from Pug into HTML!
+    | Looks like this page is being rendered from Pug into HTML! 
     | #{title}
     p#pug-variable=message
     
@@ -31,7 +32,7 @@ html
     if showRegistration
       hr
       h2.center Registration Form
-      form(action='/register', method='post').center
+      form(action="/register", method='post').center
         div
           label Username:
           input(type='text', name='username')
